2003-07-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix detection of GC_gcj_malloc.

2003-07-14  Jerome Laban <jlaban@wanadoo.fr>

	* acconfig.h:
	* configure.in: Check for gethostbyname2_r availability.
	* data/machine.config: Added section system.net/settings. Added
	option for IPv6 availability.	

2003-07-13  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/cattr-object.cs: Make it run under both mono and MS.NET.

	* mono/tests/struct.cs: Add test for unboxing trampolines.

	* mono/tests/bug-27420.cs: new regression test.

	* mono/tests/Makefile.am: skip vararg test since it does not compile 
	under mono. Add testinterp target. Add new tests.
	
2003-07-10  Martin Willemoes Hansen

	* doc/web/team.xml : Modified my tasks a bit.

2003-07-01  Paolo Molaro <lupus@ximian.com>

	* acconfig.h, configure.in: added bundle support.

2003-06-10  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Check for struct ip_mreq if struct ip_mreqn isn't
	available.

2003-06-10  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Define HAVE_GC_GCJ_MALLOC for included libgc.

2003-06-10  Martin Baulig  <martin@ximian.com>

	* configure.in: Fall back to boehm if we don't have a libgc
	subdirectory.

2003-06-10  Martin Baulig  <martin@ximian.com>

	* configure.in: Make the libgc stuff actually work; we now create
	a shared libmonogc.so when using the included libgc.

2003-06-09  Martin Baulig  <martin@ximian.com>

	* configure.in: Only check for gc if --with-gc=boehm.

2003-06-08  Martin Baulig  <martin@ximian.com>

	* configure.in: Tell libgc's configure about our threads library.

2003-06-08  Martin Baulig  <martin@ximian.com>

	* libgc/: Integrate the libgc module here.

	[Note: A simple `cvs update' won't work this time; you either need
	to re-checkout the `mono' module or manually move the `libgc'
	module here.]

	* configure.in (--with-gc): Added `included' option to use the
	included libgc.  This is now also the default.